[project]
name = "llama-stack-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "blobfile>=3.0.0",
    "fastapi>=0.116.1",
    "litellm>=1.74.9.post1",
    "llama-stack==0.2.8",
    "llama-stack-client>=0.2.16",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-instrumentation>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "uvicorn>=0.35.0",
]
